# photobooth

./: .gitignore  Makefile  README.md  make_sdk.sh  pyproject.toml  tests
Framework/EDSDK.framework/Versions/A/: EDSDK
Framework/EDSDK.framework/Versions/A/EdsImage.bundle/Contents/: Info.plist
Framework/EDSDK.framework/Versions/A/EdsImage.bundle/Contents/MacOS/: EdsImage
Framework/EDSDK.framework/Versions/A/Resources/: Info.plist
Framework/EDSDK.framework/Versions/A/_CodeSignature/: CodeResources
src/: main.py
src/photobooth/: camera.py  camera_control.py  camera_singleton.py  config.py  drawing.py  main.py  pose_detection.py  transparent_background.py
src/photobooth.egg-info/: PKG-INFO  SOURCES.txt
src/photobooth/native/: edsdk_bridge.cpp  libedsdk.dylib
src/web/static/: script.js  style.css
src/web/templates/: index.html  options.html  qrcode.html  welcome.html
tests/: cameras_check.py  count.py  test_camera.py
