[project]
name = "photobooth"
version = "0.1.0"
dependencies=[
  "opencv-python",
  "mediapipe",
  "numpy",
]
requires-python = ">=3.9"
authors = [
  {name = "Julian Banks", email = "julianrowlandbanks@gmail.com"}
]
description="A package to run a custom photobooth with AR tracking capabilities"
readme = "README.md"


[build-system]
requires = ["setuptools > 77.0.3"]
build-backend = "setuptools.build_meta"


